--- a/package.json
+++ b/package.json
@@ -17,7 +17,9 @@
     "element-ui": "^2.4.1",
     "vue": "^2.5.2",
     "vue-router": "^3.0.1",
-    "vuex": "^3.0.1"
+    "vuex": "^3.0.1",
+    "moment": "^2.22.2",
+    "numeral": "^2.0.6"
   },
   "devDependencies": {
     "autoprefixer": "^7.1.2",
