--- a/package.json
+++ b/package.json
@@ -15,11 +15,12 @@
   },
   "dependencies": {
     "element-ui": "^2.4.1",
+    "mint-ui": "^2.2.13",
+    "moment": "^2.22.2",
+    "numeral": "^2.0.6",
     "vue": "^2.5.2",
     "vue-router": "^3.0.1",
-    "vuex": "^3.0.1",
-    "moment": "^2.22.2",
-    "numeral": "^2.0.6"
+    "vuex": "^3.0.1"
   },
   "devDependencies": {
     "autoprefixer": "^7.1.2",
